Fixed potrait image that wasnt displayed on smaller devices

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -49,7 +49,7 @@
         transform: translate3d(100%, 0, 0);
 
         .portrait {
-            background: url('../img/smallPortrait.jpg');
+            background: url('../img/portraitSmaller.jpg');
             width: 150px;
             height: 150px;
         }
